--- a/package.json
+++ b/package.json
@@ -12,23 +12,28 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "2.5.1",
+    "@skeletonlabs/tw-plugin": "0.2.4",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.27.4",
+    "@tailwindcss/forms": "0.5.7",
+    "@types/node": "20.9.4",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "3.3.5",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
-    "postcss": "8.4.31",
-    "autoprefixer": "10.4.16",
-    "tailwindcss": "3.3.5",
-    "@skeletonlabs/skeleton": "2.5.1",
-    "@skeletonlabs/tw-plugin": "0.2.4",
-    "vite-plugin-tailwind-purgecss": "0.1.3",
-    "@tailwindcss/forms": "0.5.7",
-    "@types/node": "20.9.4"
+    "vite-plugin-tailwind-purgecss": "0.1.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@floating-ui/dom": "^1.5.3",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "svelte-fa": "^3.0.4"
+  }
 }
